// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render signup component with errors alert 1`] = `
<div
  className="container"
>
  <Connect(Error) />
  <div
    className="card card-body"
  >
    <h4
      className="card-title"
    >
      Sign Up
    </h4>
    <AuthForm
      onSubmit={[Function]}
    />
  </div>
</div>
`;

exports[`should render signup with no error alert 1`] = `
<div
  className="container"
>
  <div
    className="card card-body"
  >
    <h4
      className="card-title"
    >
      Sign Up
    </h4>
    <AuthForm
      onSubmit={[Function]}
    />
  </div>
</div>
`;
